<resources>
    <string name="app_name">SensorData</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUP</string>
    <string name="todo">TODO</string>
    <string name="postimage">postimage</string>
    <string name="des_image">Description</string>
    <string name="post">Post</string>
</resources>
